apps/digihero/services/gateway/envoy.template.yml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  name: envoy.access_loggers
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
                route_config:
                  name: search_route
                  response_headers_to_add:
                    - header:
                        key: Content-Security-Policy
                        value: frame-ancestors 'self';
                    - header:
                        key: Strict-Transport-Security
                        value: max-age=31536000
                  virtual_hosts:
                    - name: tdc-demo-envoy
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2:
                                max_program_size: 200
                              regex: ^https:\/\/${APPLICATION_DOMAIN}$
                        allow_methods: 'POST, PUT, GET, DELETE'
                        max_age: '86400'
                      domains: ['*']
                      routes:
                        - match:
                            prefix: /
                            headers:
                              - name: x-forwarded-proto
                                exact_match: http
                          redirect:
                            path_redirect: /
                            https_redirect: true
                        - match:
                            prefix: /digihero/oauth2/
                          route:
                            cluster: oauth-proxy
                        - match:
                            prefix: /digihero/api/digimon/
                          route:
                            cluster: digimon-api
                            prefix_rewrite: /api/digimon/
                            host_rewrite_literal: ${DIGIMON_EXTERNAL_DOMAIN}
                        - match:
                            prefix: /digihero/api/Logger
                          route:
                            prefix_rewrite: /v2/Logger
                            cluster: dummy-api
                        - match:
                            prefix: /digihero/api/
                          route:
                            prefix_rewrite: /
                            cluster: dummy-api
                        - match:
                            prefix: /digihero
                          route:
                            cluster: frontend
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config: {}
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      http_service:
                        server_uri:
                          uri: oauth2-proxy.apps.internal:8080
                          cluster: oauth-proxy
                          timeout: 4s
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: cookie
                              - prefix: x-
                        authorization_response:
                          allowed_client_headers:
                            patterns:
                              - exact: set-cookie
                          allowed_client_headers_on_success:
                            patterns:
                              - exact: set-cookie
                          allowed_upstream_headers:
                            patterns:
                              - exact: set-cookie
                              - contains: authorization
                              - prefix: x-auth-request
                  - name: envoy.filters.http.router
                    typed_config: {}

  clusters:
    - name: oauth-proxy
      connect_timeout: 4s
      type: logical_dns
      load_assignment:
        cluster_name: oauth-proxy
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: digihero.oauth2-proxy.apps.internal
                      port_value: 8080
    - name: frontend
      connect_timeout: 1s
      type: logical_dns
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: digihero.frontend.apps.internal
                      port_value: 3000
    - name: dummy-api
      connect_timeout: 1s
      type: logical_dns
      load_assignment:
        cluster_name: dummy-api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: digihero.dummy-api.apps.internal
                      port_value: 8080
    - name: digimon-api
      connect_timeout: 10s
      type: logical_dns
      load_assignment:
        cluster_name: digimon-api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${DIGIMON_EXTERNAL_DOMAIN}
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext

admin:
  access_log_path: '/dev/stdout'
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
